Add testGetDays and verify it. Return a list.